[package]
authors = ["Joshua Potts <8704475+iamjpotts@users.noreply.github.com>"]
description = "Placeholder"
edition = "2021"
include = [ 
    "**/*.rs",
]
license = "MPL-2.0"
name = "ext_auth"
repository = "https://github.com/iamjpotts/ext_auth"
rust-version = "1.64"
version = "0.0.1"

[dependencies]
